fix: 🐛 windows scrollbar due to 100vw

--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -8,7 +8,7 @@
 .section--fullscreen {
   @media only screen and (min-width: $breakpoint-tablet) {
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
   }
 }
 
